fjernet ubrukt kode og lagt til formatteringstest på statsborgerskap